src/objects/Payment2__c.object
<CustomObject>
    <description>Details of payments and refunds.</description>
    <fields>
        <fullName>Account_Holder_Name__c</fullName>
        <description>The name on the credit card or checking account, as returned from pay.gov.</description>
        <inlineHelpText>The name on the credit card or checking account, as returned from pay.gov.</inlineHelpText>
        <label>Account Holder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>The masked credit card or ACH account number, as returned from pay.gov.</description>
        <inlineHelpText>The masked credit card or ACH account number, as returned from pay.gov.</inlineHelpText>
        <label>Account Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>The name of the product family to which this payment applies.</description>
        <inlineHelpText>The name of the product family to which this payment applies.</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Services</fullName>
                    <default>true</default>
                    <label>Services</label>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Privacy Shield</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>The name of the bank on a check.</description>
        <inlineHelpText>The name of the bank on a check.</inlineHelpText>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <description>The date on a check.</description>
        <inlineHelpText>The date on a check.</inlineHelpText>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <description>The number of a check.</description>
        <inlineHelpText>The number of a check.</inlineHelpText>
        <label>Check Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Post_Acronym__c</fullName>
        <description>Populated from Opportunity.Collection_Post__r.Acronym__c</description>
        <label>Collection Post Acronym</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Post_Name__c</fullName>
        <description>Populated from Opportunity.Collection_Post__r.Name</description>
        <label>Collection Post Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Post_Org_Code__c</fullName>
        <description>Populated from Opportunity.Collection_Post__r.Org_Code__c</description>
        <label>Collection Post Org Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contract to which this payment applies.</description>
        <inlineHelpText>The contract to which this payment applies.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Post_Acronym__c</fullName>
        <description>Populated from Opportunity.Fulfillment_Post__r.Acronym__c</description>
        <label>Fulfillment Post Acronym</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Post_Name__c</fullName>
        <description>Populated from Opportunity.Fulfillment_Post__r.Name</description>
        <label>Fulfillment Post Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Post_Org_Code__c</fullName>
        <description>Populated from Opportunity.Fulfillment_Post__r.Org_Code__c</description>
        <label>Fulfillment Post Org Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_Date__c</fullName>
        <description>Populated from Opportunity.CreatedDate</description>
        <label>Opportunity Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>Populated from Opportunity.Owner.Name</description>
        <label>Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <description>Populated from Opportunity.Account.Name</description>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field for refunds related to current payment</description>
        <label>Parent Payment</label>
        <referenceTo>Payment2__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date of the payment, as returned by pay.gov or the current date for manual payments.</description>
        <inlineHelpText>The date of the payment, as returned by pay.gov or the current date for manual payments.</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Processor__c</fullName>
        <defaultValue>&apos;PayGov&apos;</defaultValue>
        <description>The name of the entity that processed this payment.</description>
        <inlineHelpText>The name of the entity that processed this payment.</inlineHelpText>
        <label>Payment Processor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Payment Type for the transaction</description>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PLASTIC_CARD</fullName>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>NIST-Handled Refund</fullName>
                </value>
                <value>
                    <fullName>Credit Card Refund</fullName>
                </value>
                <value>
                    <fullName>NIST-Handled</fullName>
                    <isActive>false</isActive>
                    <label>NIST-Handled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>Populated when payment record is created. First four characters come from the order line item. Last 3 characters are static.</description>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Explanation__c</fullName>
        <description>If the Refund Reason is &quot;other&quot;, the explanation about why the refund is being given.</description>
        <inlineHelpText>If the Refund Reason is &quot;other&quot;, the explanation about why the refund is being given.</inlineHelpText>
        <label>Refund Explanation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <description>The reason for the refund.</description>
        <inlineHelpText>The reason for the refund.</inlineHelpText>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting adjustment</fullName>
                </value>
                <value>
                    <fullName>Client cancelled participation (before fees incurred)</fullName>
                </value>
                <value>
                    <fullName>Political/economic conditions of market changed</fullName>
                </value>
                <value>
                    <fullName>Post unable to process due to competing demands</fullName>
                </value>
                <value>
                    <fullName>Product not provided when promised</fullName>
                </value>
                <value>
                    <fullName>Product provided was of poor quality</fullName>
                </value>
                <value>
                    <fullName>Service did not meet all requirements</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The total of all refunds issue against a payment.</description>
        <inlineHelpText>The total of all refunds issue against a payment.</inlineHelpText>
        <label>Refund Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remote_Tracking_Id__c</fullName>
        <description>The tracking Id returned by the payment processor.</description>
        <externalId>true</externalId>
        <inlineHelpText>The tracking Id returned by the payment processor.</inlineHelpText>
        <label>Remote Tracking Id</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Code__c</fullName>
        <description>The return code given by the payment processor during a refund.</description>
        <inlineHelpText>The return code given by the payment processor during a refund.</inlineHelpText>
        <label>Return Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Detail__c</fullName>
        <description>The return detail  given by the payment processor during a refund.</description>
        <inlineHelpText>The return detail  given by the payment processor during a refund.</inlineHelpText>
        <label>Return Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Search_String__c</fullName>
        <description>Text field populated by trigger containing the following values: OrganizationName OrderAmount RefundedAmount. Created to meet global search requirements for NIST.</description>
        <label>System-Search String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <description>The transaction amount</description>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The DateTime of the payment transaction, as returned from pay.gov for credit card and ACH payments or the date the transaction was recorded for other types of payments.</description>
        <inlineHelpText>The DateTime of the payment transaction, as returned from pay.gov for credit card and ACH payments or the date the transaction was recorded for other types of payments.</inlineHelpText>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <description>The payment transaction status, as returned by pay.gov</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                    <default>true</default>
                    <label>Initiated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the transaction has been transmitted to NIST.</description>
        <inlineHelpText>Whether the transaction has been transmitted to NIST.</inlineHelpText>
        <label>Transmitted</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment 2</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Remote_Tracking_Id__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Transaction_Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Refund_Total__c</columns>
        <columns>Contract__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DCRM{000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <recordTypes>
        <fullName>Bank_Transfer_Payment</fullName>
        <active>true</active>
        <description>Record type for bank transfer payments.</description>
        <label>Bank Transfer Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cash_Payment</fullName>
        <active>true</active>
        <description>Record type for cash payments.</description>
        <label>Cash Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Check_Payment</fullName>
        <active>true</active>
        <description>Record type for check payments.</description>
        <label>Check Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card_Refund</fullName>
        <active>true</active>
        <description>Record type for credit card refunds.</description>
        <label>Credit Card Refund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card_or_ACH_Payment</fullName>
        <active>true</active>
        <description>Record type for credit card and ACH payments.</description>
        <label>Credit Card or ACH Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>NIST_Issued_Refund</fullName>
        <active>true</active>
        <description>Record type for manually recorded refunds of all types.</description>
        <label>NIST-Issued Refund</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>V01CheckNumberMustBeNumeric</fullName>
        <active>true</active>
        <description>For check payments, the check number must be numeric.</description>
        <errorConditionFormula>AND(
  $RecordType.DeveloperName = &apos;Check_Payment&apos;,
  NOT(ISNUMBER( Check_Number__c ))
)</errorConditionFormula>
        <errorDisplayField>Check_Number__c</errorDisplayField>
        <errorMessage>The check number must be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>V02RefundExplanationRequired</fullName>
        <active>true</active>
        <description>If the Refund Reason is &quot;Other&quot;, the Refund Explanation is required.</description>
        <errorConditionFormula>AND(
OR($RecordType.DeveloperName = &apos;Credit_Card_Refund&apos;,
$RecordType.DeveloperName = &apos;NIST_Issued_Refund&apos;),
ISPICKVAL(Refund_Reason__c, &apos;Other&apos;),
ISBLANK( Refund_Explanation__c )
)</errorConditionFormula>
        <errorMessage>Refund Explanation is required if the Refund Reason is &quot;Other&quot;.</errorMessage>
    </validationRules>
</CustomObject>